fixed #496 placeholder and layout switcher not showing in ie 9

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -222,6 +222,9 @@ header.topbar
         color: rgba(255,255,255,.75)
       &::-webkit-input-placeholder
         color: rgba(255,255,255,.75)
+      &.placeholder
+        color: #BFC5B8
+
     ul#quick_search
       background: #FFF
       padding: 5px
