--- a/app/assets/stylesheets/preboot.sass
+++ b/app/assets/stylesheets/preboot.sass
@@ -360,6 +360,7 @@ $analog2: adjust-hue($baseColor, -22)
   background-color: $endColor
   background-repeat: $repeat
   background-position: 0 0 
+  background-image: url($url)
   background-image: url($url), -khtml-gradient(linear, left top, left bottom, from($startColor), to($endColor))
   // Konqueror
   background-image: url($url), -moz-linear-gradient(top, $startColor, $endColor)
